--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "jquery-date-range-picker": "^1.0.4",
+    "moment": "^2.29.1",
     "slick-carousel": "^1.8.1"
   }
 }
