--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.6.0",
     "jquery-date-range-picker": "^1.0.4",
     "moment": "^2.29.1",
+    "select2": "^4.1.0-rc.0",
     "slick-carousel": "^1.8.1"
   }
 }
