--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "jquery-date-range-picker": "^1.0.4",
+    "magnific-popup": "^1.1.0",
     "moment": "^2.29.1",
     "select2": "^4.1.0-rc.0",
     "slick-carousel": "^1.8.1"
