--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^4.6.0",
+    "dropzone": "^5.9.3",
     "jquery": "^3.6.0",
     "jquery-date-range-picker": "^1.0.4",
     "magnific-popup": "^1.1.0",
